RESULTADO.txt
Launching conecta4.mas2j
Parsing project file...  parsed successfully!
Executing C:\Program Files\Java\jdk1.8.0\bin\java -classpath D:\Documentos\Escritorio\Jason\lib\ant-launcher.jar org.apache.tools.ant.launch.Launcher -e -f bin\build.xml run
Buildfile: D:\Documentos\Mis documentos\GitHub\JasonConecta4\bin\build.xml

init:

user-init:

compile:
Compiling 1 source file to D:\Documentos\Mis documentos\GitHub\JasonConecta4\bin\classes
D:\Documentos\Mis documentos\GitHub\JasonConecta4\FourinrowBoard.java:1: error: cannot find symbol
import jason.NoValueForVarException;
            ^
  symbol:   class NoValueForVarException
  location: package jason
D:\Documentos\Mis documentos\GitHub\JasonConecta4\FourinrowBoard.java:62: error: cannot find symbol
                catch (NoValueForVarException e) {
                       ^
  symbol:   class NoValueForVarException
  location: class FourinrowBoard
2 errors

BUILD FAILED
D:\Documentos\Mis documentos\GitHub\JasonConecta4\bin\build.xml:43: Compile failed; see the compiler error output for details.

Total time: 1 second
